move BibTeX files to correct directories (#12)
* move BibTeX files to correct directories

Signed-off-by: Jinzhe Zeng <jinzhe.zeng@rutgers.edu>

* style: apply pre-commit fixes

* write before format

* style: apply pre-commit fixes

---------

Signed-off-by: Jinzhe Zeng <jinzhe.zeng@rutgers.edu>
Co-authored-by: njzjz <njzjz@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,20 @@ repos:
       - id: check-symlinks
       - id: check-toml
       - id: mixed-line-ending
+  # Python
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.8
+    hooks:
+      - id: ruff-format
+  # BibTeX
+  - repo: local
+    hooks:
+      - id: check-bibtex
+        name: check-bibtex
+        entry: python .scripts/check-bibtex.py
+        language: python
+        types: [bib]
+        additional_dependencies: ["bibtexparser==2.0.0b7"]
   - repo: https://github.com/njzjz/mirrors-bibtex-tidy
     rev: v1.13.0
     hooks:
