--- a/.github/workflows/combine.yaml
+++ b/.github/workflows/combine.yaml
@@ -10,7 +10,7 @@ jobs:
         uses: SimenB/github-actions-cpu-cores@v2
         id: cpu-cores
       - name: Combine BiBTeX
-        run: mkdir -p dist && find . -name "*.bib" -type f -print0 | xargs -0 -n 1 -P ${{ steps.cpu-cores.outputs.count }} sed -i -e '$a\' > dist/combined.bib
+        run: mkdir -p dist && find . -name "*.bib" -type f -print0 | xargs -0 -n 1 -P ${{ steps.cpu-cores.outputs.count }} cat > dist/combined.bib
       - name: Archive combine BiBTeX
         uses: actions/upload-artifact@v4
         id: upload-artifact
