--- a/action.yaml
+++ b/action.yaml
@@ -12,5 +12,7 @@ runs:
       id: cpu-cores
     - name: Create output directory
       run: mkdir -p $(dirname ${{ inputs.output }})
+      shell: bash
     - name: Combine BiBTeX
       run: find ${{ github.action_path }} -name "*.bib" -type f -print0 | xargs -0 -n 1 -P ${{ steps.cpu-cores.outputs.count }} cat > ${{ inputs.output }}
+      shell: bash
