--- a/.github/workflows/combine.yaml
+++ b/.github/workflows/combine.yaml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          output: dist/combined.bib
+          output: ../dist/combined.bib
+      - run: mv ../dist .
       - name: Archive combine BiBTeX
         uses: actions/upload-artifact@v4
         id: upload-artifact
