--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -11,6 +11,8 @@ jobs:
     if: contains(github.event.issue.title, '/new')
     steps:
       - uses: actions/checkout@v4
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
       - name: Cache pre-commit
         uses: actions/cache@v4
         with:
@@ -21,7 +23,7 @@ jobs:
         run: |
           echo identifiers=$(echo "${{ github.event.issue.title }}" | grep -oE '/new .*' | head -n1 | cut -c5- | xargs echo -n) >> $GITHUB_OUTPUT
       - name: Run wenxian
-        run: pipx run uv tool run wenxian from $INPUT_IDENTIFIER -o
+        run: uvx wenxian from $INPUT_IDENTIFIER -o
         env:
           INPUT_IDENTIFIER: ${{ steps.extract-identifiers.outputs.identifiers }}
       - name: Create a PR
@@ -30,8 +32,8 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git checkout -b wenxian/$INPUT_IDENTIFIER
           git add .
-          pipx run uv tool run pre-commit run --show-diff-on-failure --color=always -a || git add .
-          pipx run uv tool run pre-commit run --show-diff-on-failure --color=always -a || git add .
+          uvx pre-commit run --show-diff-on-failure --color=always -a || git add .
+          uvx pre-commit run --show-diff-on-failure --color=always -a || git add .
           git commit -m "Add BibTeX item from indentifier $INPUT_IDENTIFIER" -m "Fix #${{ github.event.issue.number }}. Powered by wenxian."
           git push origin wenxian/$INPUT_IDENTIFIER --force
           gh pr create -f
