--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -35,7 +35,7 @@ jobs:
           uvx pre-commit run --show-diff-on-failure --color=always -a || git add .
           uvx pre-commit run --show-diff-on-failure --color=always -a || git add .
           git commit -m "Add BibTeX item from indentifier $INPUT_IDENTIFIER" -m "Fix #${{ github.event.issue.number }}. Powered by wenxian."
-          git push origin wenxian/$INPUT_IDENTIFIER --force
+          git push -u origin wenxian/$INPUT_IDENTIFIER --force
           gh pr create -f
         env:
           INPUT_IDENTIFIER: ${{ steps.extract-identifiers.outputs.identifiers }}
